chore(maintain):style the pages
ensure the pages are well arranged
ensure the pages are well styled pleasing to look at

[Starts ch-chore-UI-CSS-#163343473]

--- a/UI/dashboard.html
+++ b/UI/dashboard.html
@@ -5,133 +5,113 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Users dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/test2.css" />
 </head>
 <body>
-    <header class="default-header">
-        <div class="sticky-wrapper">
-            <div class="container">
-                <div class="header-content">
-                    <div class="logo">
-                        <a href="#">Politico</a>
-                    </div><!--logo closed-->
-                    <div class="image-user">
-                        <img src="./assets/img/doug.jpg" alt="user picture" height="50px" width="50px">
-                    </div>
-                </div><!-- header-content closed -->
-            </div> <!-- container closed -->   
-        </div><!-- sticky header closed --> 
-    </header>
-
-    <div id="wrapper">
-        <aside>
-            <div class="sidebar">
-            <section class="user-menu">
-                <ul class="navbar-nav">
-                    <li><a class="btn side" href="dashboard.html">Basic</a></li>
-                    <li><a class="btn side" href="parties.html">Political Parties</a></li>
-                    <li><a class="btn side" href="politicalOffice.html">Political Office</a></li>
-                    <li><a class="btn side" href="#" aria-haspopup="true">Election</a>
-                        <ul class="dropdown" aria-label="submenu">
-                            <li><a href="contestants.html">Contestants</a></li>
-                            <li><a href="electionResult.html">Results</a></li>
-                            <li><a href="vote.html">Vote</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </section>
-            </div>
-        </aside>
-        <main>
+    
+       
+    <header class="header">
+        <div class="logo">
+          <p>Politico</p>
+        </div><a class="nav-trigger text-replace" href="#0">Menu<span></span></a>
+      </header>
+      <main class="content">
             <section id="main-content">
-                <div class="container-wrapper">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-12 mx">
-                                <div class="user-profile text-center">
-                                    <h3>Profile Detail</h3>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row jcc">
-                            <div class="col-4 mx">
-                                <div class="user-profile-image">
-                                    <img src="./assets/img/team2.png" alt="" class="img-fluid">
-                                </div>
-                            </div>
-                            <div class="col-7 mx">
-                                <div class="contact-info">
-                                    <h3 class="text-center">Contact Information</h3>
-                                    <div class="info-box">
-                                        <p>Email: makemevote@gmail.com</p>
-                                        <p>Mobile: +453 8506 8900</p>
-                                        <p>Work Phone: +563 9066 5322</p>
-                                        <p>Home Address: East 73rd and Madison, Town Planning Square Netherland</p>
-                                        <p></p>
+                    <div class="container-wrapper">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12 mx">
+                                    <div class="user-profile text-center header-container">
+                                        <h2>Profile Detail</h2>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row jcc">
-                            <div class="col-5 mx">
-                                <div class="general-info">
-                                    <h3 class="text-center">General Information</h3>
-                                    <div class="info-box">
-                                        <p>Name: Alfred Epictetus</p>
-                                        <p>Date of Birth: May 27th, 1976</p>
-                                        <p>Occupation: Software Developer</p>
-                                        <p>Position: Lead Developer</p>
-                                        <p>Status: Divorced</p>
+                            <div class="row jcc">
+                                <div class="col-4 mx">
+                                    <div class="user-profile-image">
+                                        <img src="./assets/img/team2.png" alt="" class="img-fluid">
+                                    </div>
+                                </div>
+                                <div class="col-7 mx">
+                                    <div class="contact-info">
+                                        <h3 class="text-center">Contact Information</h3>
+                                        <div class="info-box">
+                                            <p>Email: makemevote@gmail.com</p>
+                                            <p>Mobile: +453 8506 8900</p>
+                                            <p>Work Phone: +563 9066 5322</p>
+                                            <p>Home Address: East 73rd and Madison, Town Planning Square Netherland</p>
+                                            <p></p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-5 mx">
-                                <div class="add-info">
-                                    <h3 class="text-center">Additional Information</h3>
-                                    <div class="info-box">
-                                        <p>Qualification: B.Tech Electrical Electronics</p>
-                                        <p>Graduate School: University of Washington</p>
-                                        <p>Interests: Internet, Football, Marketing, Basketball</p>
-                                        <p>facebook: facebook.com/epictetus</p>
-                                        <p>Twitter: twitter.com/epictetus</p>
+                            <div class="row jcc">
+                                <div class="col-5 mx">
+                                    <div class="general-info">
+                                        <h3 class="text-center">General Information</h3>
+                                        <div class="info-box">
+                                            <p>Name: Alfred Epictetus</p>
+                                            <p>Date of Birth: May 27th, 1976</p>
+                                            <p>Occupation: Software Developer</p>
+                                            <p>Position: Lead Developer</p>
+                                            <p>Status: Divorced</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-5 mx">
+                                    <div class="add-info">
+                                        <h3 class="text-center">Additional Information</h3>
+                                        <div class="info-box">
+                                            <p>Qualification: B.Tech Electrical Electronics</p>
+                                            <p>Graduate School: University of Washington</p>
+                                            <p>Interests: Internet, Football, Marketing, Basketball</p>
+                                            <p>facebook: facebook.com/epictetus</p>
+                                            <p>Twitter: twitter.com/epictetus</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row jcc">
-                            <div class="col-12 mx">
-                                <h3 class="text-center">Voting History</h3>
-                            </div>
-                            <div class="col-6 mx">
-                                <h4 class="text-center">Favourite Candidates</h4>
-                                <div class="info-box">
-                                    <p>Alexander Mahone</p>
-                                    <p>Fernando Sucre</p>
-                                    <p>Wentworth Miller</p>
-                                    <p>Barrack Obama</p>
-                                    <p>Merkel Angela</p>
+                            <div class="row jcc">
+                                <div class="col-12 mx">
+                                    <h3 class="text-center">Voting History</h3>
                                 </div>
-                            </div>
-                            <div class="col-6 mx">
-                                <h4 class="text-center">Election History</h4>
-                                <div class="info-box">
-                                    <p>President - 2012</p>
-                                    <p>President - 2008</p>
-                                    <p>Governor - 2012</p>
-                                    <p>Governor - 2000</p>
-                                    <p>Mayor - 2017</p>
+                                <div class="col-6 mx">
+                                    <h4 class="text-center">Favourite Candidates</h4>
+                                    <div class="info-box">
+                                        <p>Alexander Mahone</p>
+                                        <p>Fernando Sucre</p>
+                                        <p>Wentworth Miller</p>
+                                        <p>Barrack Obama</p>
+                                        <p>Merkel Angela</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </div><!-- row closed-->
-                    </div><!-- container closed-->
-                </div><!--- container-wrapper closed -->
-            </section>
-        </main>
-        <footer>
-            <div class="footer-content">
-                <p>Copyright&COPY; Hoxtygen. All right reserved</p>
-            </div>
-        </footer>
-    </body>
+                                <div class="col-6 mx">
+                                    <h4 class="text-center">Election History</h4>
+                                    <div class="info-box">
+                                        <p>President - 2012</p>
+                                        <p>President - 2008</p>
+                                        <p>Governor - 2012</p>
+                                        <p>Governor - 2000</p>
+                                        <p>Mayor - 2017</p>
+                                    </div>
+                                </div>
+                            </div><!-- row closed-->
+                        </div><!-- container closed-->
+                    </div><!--- container-wrapper closed -->
+                </section>
+      </main>
+      <nav class="main-nav-wrapper">
+        <ul class="nav">
+            <li><a class="side top-link" href="dashboard.html">General</a></li>
+            <li><a class="side" href="parties.html">Political Parties</a></li>
+            <li><a class="side" href="politicalOffice.html">Political Office</a></li>
+            <li><a href="contestants.html">Contestants</a></li>
+            <li><a href="electionResult.html">Results</a></li>
+            <li><a href="vote.html">Vote</a></li>
+        </ul>
+      </nav>
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="./assets/js/main.js"></script>
+        </body>
 </html>
