--- a/UI/index.html
+++ b/UI/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header class="default-header">
-        <div class="sticky-wrapper">
+        <div class="sticky-wrapper" style="background: transparent">
             <div class="container">
                 <div class="header-content">
                     <div class="logo">
-                        <a href="http://" target="_blank" rel="noopener noreferrer">Politico</a>
+                        <a href="#" rel="noopener noreferrer">Politico</a>
                     </div>
                     <nav class="d-flex aic">
                         <ul class="nav-menu">
@@ -26,16 +26,19 @@
         </div>
     </header>
 
-    <div id="home-wrapper">
-        <div class="container">
-            <div class="row fullscreen">
-                <div class="col-8 mx">
-                    <div class="banner">
-                        <h1>Voting is your right, cast your vote</h1>
+    <section class="banner-area relative">
+        <div class="overlay overlay-bg"></div>
+        <div class="banner">
+            <div class="container">
+                <div class="row jcc aic fullscreen">
+                    <div class="col-8 text-center">
+                        <div class="banner-content text-center">
+                            <h1 class="text-uppercase">Ever heard of universal adult suffrage?</h1>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </body>
 </html>
