--- a/UI/login.html
+++ b/UI/login.html
@@ -8,22 +8,23 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
 </head>
 <body>
-   <!--  <header class="default-header">
-        <div class="sticky-wrapper">
+    <header class="default-header">
+        <div class="sticky-wrapper" style="background: transparent">
             <div class="container">
                 <div class="header-content aic jcb d-flex">
                     <div class="logo">
-                        <a href="http://" target="_blank" rel="noopener noreferrer">Politico</a>
+                        <a href="index.html" rel="noopener noreferrer">Politico</a>
                     </div>
                     <nav class="d-flex aic">
-                        <ul class="nav-menu">
-                            <li><a href="http://" target="_blank" rel="noopener noreferrer">Signup</a></li>
-                        </ul>
+                            <ul class="nav-menu">
+                                <li><a href="signup.html" rel="noopener noreferrer">Signup</a></li>
+                            </ul>
                     </nav>
+                    
                 </div>
             </div>
         </div>
-    </header> -->
+    </header>
 
     <div id = "form-wrapper">
         <section class="form-register">
@@ -32,7 +33,6 @@
                 <div class="row fullscreen jcc aic h100">
                     <div class="col-6 mx tc">
                         <div class="smug mb-10">
-                            <h2>POLITICO</h2>
                             <h4>Voting is your right, exercise it!!</h4>
                         </div>
                         <div class="form-container">
@@ -45,7 +45,7 @@
                                 </div>
                                 <a href="passReset.html">Forgot password?</a>
                                 <div class="d-flex jcc">
-                                    <button class="mt-10 aic btn-primary text-uppercase">Login</button>
+                                    <button class="mt-10 aic btn btn-primary text-uppercase">Login</button>
                                 </div>
                             </form>
                             <p>Don't have an account?</p>
