--- a/UI/parties.html
+++ b/UI/parties.html
@@ -5,118 +5,125 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Users dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/test2.css" />
 </head>
 <body>
-    <header class="default-header">
-        <div class="sticky-wrapper">
-            <div class="container">
-                <div class="header-content">
-                    <div class="logo">
-                        <a href="#">Politico</a>
-                    </div><!--logo closed-->
-                    <div class="image-user">
-                        <img src="./assets/img/doug.jpg" alt="user picture" height="50px" width="50px">
-                    </div>
-                </div><!-- header-content closed -->
-            </div> <!-- container closed -->   
-        </div><!-- sticky header closed --> 
-    </header>
-
-    <div id="wrapper">
-        <aside>
-            <div class="sidebar">
-            <section class="user-menu">
-                <ul class="navbar-nav">
-                    <li><a class="btn side" href="dashboard.html">Basic</a></li>
-                    <li><a class="btn side" href="parties.html">Political Parties</a></li>
-                    <li><a class="btn side" href="politicalOffice.html">Political Office</a></li>
-                    <li><a class="btn side" href="#" aria-haspopup="true">Election</a>
-                        <ul class="dropdown" aria-label="submenu">
-                            <li><a href="contestants.html">Contestants</a></li>
-                            <li><a href="electionResult.html">Results</a></li>
-                            <li><a href="vote.html">Vote</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </section>
-            </div>
-        </aside>
-        <main>
+    
+       
+    <header class="header">
+        <div class="logo">
+          <p>Politico</p>
+        </div><a class="nav-trigger text-replace" href="#0">Menu<span></span></a>
+      </header>
+      <main class="content">
             <section id="main-content">
-                <div class="container-wrapper">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-12 mx">
-                               <div class="addNewParty">
-                                    <a class="btn" href="newParty.html" style="color:black">Create new party</a>
-                               </div>
+                    <div class="container-wrapper">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12 mx">
+                                    <div class="text-center header-container">
+                                        <h2>Registered Political Parties</h2>
+                                    </div>
+                                </div>
+                                <div class="col-12 mx">
+                                   <div class="addNewParty">
+                                        <a class="btn" href="newParty.html" style="color:black">Create new party</a>
+                                   </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row jcc">
-                            <div class="col-7 mx">
-                                <table>
-                                    <thead>
-                                        <tr>
-                                            <th>Name</th>
-                                            <th>Acronym</th>
-                                            <th>Action</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>Peoples Democratic Party</td>
-                                            <td><Acronym>PDP</Acronym></td>
+                            <div class="row jcc">
+                                <div class="col-10 mx">
+                                    <table id = "dataTable">
+                                        <thead>
+                                            <tr>
+                                                <th>id</th>
+                                                <th>Name</th>
+                                                <th>Acronym</th>
+                                                <th>Logo</th>
+                                                <th>Headquarter Address</th>
+                                                <th>Action</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>1</td>
+                                                <td>Peoples Democratic Party</td>
+                                                <td><Acronym>PDP</Acronym></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td>
+                                                    <a href="partyEdit.html">Edit</a>
+                                                    <button class="btn delete" type="submit">Delete</button>
+                                                </td>
+                                            </tr>
+
+                                            <tr>
+                                                <td>2</td>
+                                            <td>Labour Party</td>
+                                            <td><Acronym>LP</Acronym></td>
+                                            <td></td>
+                                            <td></td>
                                             <td>
                                                 <a href="partyEdit.html">Edit</a>
                                                 <button class="btn delete" type="submit">Delete</button>
                                             </td>
-                                        </tr>
-                                        <tr>
-                                        <td>National Peoples Party</td>
-                                        <td><Acronym>NPP</Acronym></td>
-                                        <td>
-                                            <a href="partyEdit.html">Edit</a>
-                                            <button class="btn delete" type="submit">Delete</button>
-                                        </td>
-                                        </tr>
-                                        <tr>
-                                        <td>All Nigerian Peoples Party</td>
-                                        <td><Acronym>ANPP</Acronym></td>
-                                        <td>
-                                            <a href="partyEdit.html">Edit</a>
-                                            <button class="btn delete" type="submit">Delete</button>
-                                        </td>
-                                        </tr>
-                                        <tr>
-                                            <td>Alliance for Democracy</td>
-                                            <td><Acronym>AD</Acronym></td>
+                                            </tr>
+
+                                            <tr>
+                                                <td>3</td>
+                                            <td>Democratic Peoples Party</td>
+                                            <td><Acronym>DPP</Acronym></td>
+                                            <td></td>
+                                            <td></td>
                                             <td>
                                                 <a href="partyEdit.html">Edit</a>
                                                 <button class="btn delete" type="submit">Delete</button>
                                             </td>
-                                        </tr>
-                                        <tr>
-                                            <td>All Peoples Congress</td>
-                                            <td><Acronym>APC</Acronym></td>
-                                            <td>
-                                                <a href="partyEdit.html">Edit</a>
-                                                <button class="btn delete" type="submit">Delete</button>
-                                            </td>
-                                        </tr>     
-                                    </tbody>                                   
-                                </table>
+                                            </tr>
+
+                                            <tr>
+                                                <td>4</td>
+                                                <td>Progressive Peoples Alliance</td>
+                                                <td><Acronym>PPA</Acronym></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td>
+                                                    <a href="partyEdit.html">Edit</a>
+                                                    <button class="btn delete" type="submit">Delete</button>
+                                                </td>
+                                            </tr>
+
+                                            <tr>
+                                                <td>5</td>
+                                                <td>All Peoples Congress</td>
+                                                <td><Acronym>APC</Acronym></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td>
+                                                    <a href="partyEdit.html">Edit</a>
+                                                    <button class="btn delete" type="submit">Delete</button>
+                                                </td>
+                                            </tr>     
+                                        </tbody>                                   
+                                    </table>
+                                </div>
                             </div>
-                        </div>
-                    </div><!-- container closed-->
-                </div><!--- container-wrapper closed -->
-            </section>
-        </main>
-        <footer>
-            <div class="footer-content">
-                <p>Copyright&COPY; Hoxtygen. All right reserved</p>
-            </div>
-        </footer>
-    </body>
+                        </div><!-- container closed-->
+                    </div><!--- container-wrapper closed -->
+                </section>
+      </main>
+      <nav class="main-nav-wrapper">
+        <ul class="nav">
+            <li><a class="side top-link" href="dashboard.html">General</a></li>
+            <li><a class="side" href="parties.html">Political Parties</a></li>
+            <li><a class="side" href="politicalOffice.html">Political Office</a></li>
+            <li><a href="contestants.html">Contestants</a></li>
+            <li><a href="electionResult.html">Results</a></li>
+            <li><a href="vote.html">Vote</a></li>
+        </ul>
+      </nav>
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="./assets/js/main.js"></script>
+        </body>
 </html>
