--- a/UI/passReset.html
+++ b/UI/passReset.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Create a Politico Account</title>
+    <title>Password Reset</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
 </head>
 <body>
-   <!--  <header class="default-header">
-        <div class="sticky-wrapper">
+    <header class="default-header">
+        <div class="sticky-wrapper" style="background: transparent">
             <div class="container">
                 <div class="header-content aic jcb d-flex">
                     <div class="logo">
-                        <a href="http://" target="_blank" rel="noopener noreferrer">Politico</a>
+                        <a href="index.html" rel="noopener noreferrer">Politico</a>
                     </div>
                     <nav class="d-flex aic">
                         <ul class="nav-menu">
-                            <li><a href="http://" target="_blank" rel="noopener noreferrer">Signup</a></li>
+                            <li><a href="signup.html" rel="noopener noreferrer">Signup</a></li>
                         </ul>
                     </nav>
+                    
                 </div>
             </div>
         </div>
-    </header> -->
+    </header>
 
     <div id = "form-wrapper">
         <section class="form-register">
@@ -32,8 +33,7 @@
                 <div class="row fullscreen jcc aic h100">
                     <div class="col-6 mx tc">
                         <div class="smug mb-10">
-                            <h2>POLITICO</h2>
-                            <h4>Password Reset</h4>
+                            <h4>Reset your password</h4>
                         </div>
                         <div class="form-container">
                             <form action="" id="regForm" class="form mb-10">
@@ -47,11 +47,9 @@
                                     <input type="password" name="confirmPassword" placeholder="Confirm password" onblur="this.placeholder='Confirm password'" onfocus="this.placeholder=''">
                                 </div>
                                 <div class="d-flex jcc">
-                                    <button class="mt-10 aic btn-primary text-uppercase">Reset Password</button>
+                                    <button class="mt-10 aic btn btn-primary text-uppercase">Reset Password</button>
                                 </div>
                             </form>
-                            <p>Already have an account?</p>
-                            <a href="login.html">Sign in</a>
                         </div><!-- form-container closed-->
                     </div>
                 </div>
