--- a/UI/signup.html
+++ b/UI/signup.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
 </head>
 <body>
-   <!--  <header class="default-header">
-        <div class="sticky-wrapper">
+    <header class="default-header">
+        <div class="sticky-wrapper" style="background: transparent">
             <div class="container">
                 <div class="header-content aic jcb d-flex">
                     <div class="logo">
-                        <a href="http://" target="_blank" rel="noopener noreferrer">Politico</a>
+                        <a href="index.html" rel="noopener noreferrer">Politico</a>
                     </div>
                     <nav class="d-flex aic">
                         <ul class="nav-menu">
-                            <li><a href="http://" target="_blank" rel="noopener noreferrer">Signup</a></li>
+                            <li><a href="login.html" rel="noopener noreferrer">Login</a></li>
                         </ul>
                     </nav>
                 </div>
             </div>
         </div>
-    </header> -->
+    </header>
 
     <div id = "form-wrapper">
         <section class="form-register">
@@ -32,22 +32,33 @@
                 <div class="row fullscreen jcc aic h100">
                     <div class="col-6 mx tc">
                         <div class="smug mb-10">
-                            <h2>POLITICO</h2>
-                            <h4>Voting is your right, exercise it!!</h4>
+                            <h4>New User Registration</h4>
                         </div>
                         <div class="form-container">
                             <form action="" id="regForm" class="form mb-10">
                                 <div class="single-input mb-10">
-                                    <input type="text" name="fullName" placeholder="e.g Hernan Crespo" required onfocus="this.placeholder = ''" onblur="this.placeholder = 'Full Name'">
+                                    <input type="text" name="fname" placeholder="First name " required onfocus="this.placeholder = ''" onblur="this.placeholder = 'First name'">
+                                </div>
+                                <div class="single-input mb-10">
+                                    <input type="text" name="lName" placeholder="Last name" onblur="this.placeholder='Your last name'" onfocus="this.placeholder=''">
+                                </div>
+                                <div class="single-input mb-10">
+                                    <input type="password" name="oName" placeholder="Other names" onblur="this.placeholder='Other names'" onfocus="this.placeholder=''">
+                                </div>
+                                <div class="single-input mb-10">
+                                    <input type="tel" name="phoneNum" placeholder="Your phone number" onblur="this.placeholder='Your phone number'" onfocus="this.placeholder=''">
                                 </div>
                                 <div class="single-input mb-10">
                                     <input type="email" name="email" placeholder="Email Address" onfocus="this.placeholder=''" onblur="this.placeholder ='Email Address'">
                                 </div>
                                 <div class="single-input mb-10">
+                                    <input type="url" name="passport" placeholder="Your passport url" onblur="this.placeholder='Your passport url'" onfocus="this.placeholder=''">
+                                </div>
+                                <div class="single-input mb-10">
                                     <input type="password" name="passoword" placeholder="Your Password" onblur="this.placeholder='Your Password'" onfocus="this.placeholder=''">
                                 </div>
                                 <div class="d-flex jcc">
-                                    <button class="mt-10 aic btn-primary text-uppercase">Register</button>
+                                    <button class="mt-10 aic btn btn-primary text-uppercase">Register</button>
                                 </div>
                             </form>
                             <p>Already have an account?</p>
