--- a/dashboard.html
+++ b/dashboard.html
@@ -34,7 +34,7 @@
                                 </div>
                                 <div class="col-7 mx">
                                     <div class="contact-info">
-                                        <h3 class="text-center">Contact Information</h3>
+                                        <h3 class="text-center subheading mb-10">Contact Information</h3>
                                         <div class="info-box">
                                             <p>Email: makemevote@gmail.com</p>
                                             <p>Mobile: +453 8506 8900</p>
@@ -48,8 +48,8 @@
                             <div class="row jcc">
                                 <div class="col-5 mx">
                                     <div class="general-info">
-                                        <h3 class="text-center">General Information</h3>
-                                        <div class="info-box">
+                                        <h3 class="text-center subheading mb-10">General Information</h3>
+                                        <div class="info-box mb-10">
                                             <p>Name: Alfred Epictetus</p>
                                             <p>Date of Birth: May 27th, 1976</p>
                                             <p>Occupation: Software Developer</p>
@@ -60,8 +60,8 @@
                                 </div>
                                 <div class="col-5 mx">
                                     <div class="add-info">
-                                        <h3 class="text-center">Additional Information</h3>
-                                        <div class="info-box">
+                                        <h3 class="text-center subheading mb-10">Additional Information</h3>
+                                        <div class="info-box mb-10">
                                             <p>Qualification: B.Tech Electrical Electronics</p>
                                             <p>Graduate School: University of Washington</p>
                                             <p>Interests: Internet, Football, Marketing, Basketball</p>
@@ -73,11 +73,11 @@
                             </div>
                             <div class="row jcc">
                                 <div class="col-12 mx">
-                                    <h3 class="text-center">Voting History</h3>
+                                    <h3 class="text-center subheading mb-10">Voting History</h3>
                                 </div>
                                 <div class="col-6 mx">
-                                    <h4 class="text-center">Favourite Candidates</h4>
-                                    <div class="info-box">
+                                    <h4 class="text-center subheading mb-10">Favourite Candidates</h4>
+                                    <div class="info-box mb-10">
                                         <p>Alexander Mahone</p>
                                         <p>Fernando Sucre</p>
                                         <p>Wentworth Miller</p>
@@ -86,8 +86,8 @@
                                     </div>
                                 </div>
                                 <div class="col-6 mx">
-                                    <h4 class="text-center">Election History</h4>
-                                    <div class="info-box">
+                                    <h4 class="text-center mb-10 subheading">Election History</h4>
+                                    <div class="info-box mb-10">
                                         <p>President - 2012</p>
                                         <p>President - 2008</p>
                                         <p>Governor - 2012</p>
